500 error handling / docs
